phf_macros_tests/tests/compile-fail/bad-syntax.stderr
error: expected identifier
 --> tests/compile-fail/bad-syntax.rs:5:5
  |
5 |     => //~ ERROR expected identifier
  |     ^^
